--- a/data-tokeniztion-fe/package.json
+++ b/data-tokeniztion-fe/package.json
@@ -1,49 +1,53 @@
 {
-  "name": "data-tokeniztion-fe",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.12",
-    "@hookform/resolvers": "^3.4.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "aws-amplify": "^6.3.2",
-    "axios": "^1.7.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "js-cookie": "^3.0.5",
-    "lucide": "^0.378.0",
-    "lucide-react": "^0.378.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.4",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+    "name": "data-tokeniztion-fe",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite --port 3000 --host 0.0.0.0",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@aws-amplify/ui-react": "^6.1.12",
+        "@hookform/resolvers": "^3.4.0",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-slot": "^1.0.2",
+        "aws-amplify": "^6.3.2",
+        "axios": "^1.7.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "js-cookie": "^3.0.5",
+        "lucide": "^0.378.0",
+        "lucide-react": "^0.378.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.51.4",
+        "react-router": "^6.23.1",
+        "react-router-dom": "^6.23.1",
+        "react-toastify": "^10.0.5",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/js-cookie": "^3.0.6",
+        "@types/node": "^20.12.12",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.6",
+        "postcss": "^8.4.38",
+        "prettier": "^3.2.5",
+        "sass": "^1.77.2",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.2.2",
+        "vite": "^5.2.0"
+    }
 }
