--- a/amplify/backend/function/rawDataHandler/src/package.json
+++ b/amplify/backend/function/rawDataHandler/src/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "aws-sdk": "^2.1628.0",
     "aws-serverless-express": "^3.3.5",
-    "express": "^4.15.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.15.2",
+    "moment-timezone": "^0.5.45",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
