fix: tsc ignore and change path config

--- a/data-tokeniztion-fe/package.json
+++ b/data-tokeniztion-fe/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --port 3000 --host 0.0.0.0",
-        "build": "tsc && vite build",
+        "build": "tsc-silent -p tsconfig.json --suppress @ && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
         "preview": "vite preview"
@@ -47,6 +47,7 @@
         "prettier": "^3.2.5",
         "sass": "^1.77.2",
         "tailwindcss": "^3.4.3",
+        "tsc-silent": "^1.2.2",
         "typescript": "^5.2.2",
         "vite": "^5.2.0"
     }
