--- a/data-tokeniztion-fe/package.json
+++ b/data-tokeniztion-fe/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --port 3000 --host 0.0.0.0",
-        "build": "npx tsc-silent -p tsconfig.json --suppress @ && vite build",
+        "build": "npm install && npx tsc-silent -p tsconfig.json --suppress @ && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
         "preview": "vite preview"
@@ -29,7 +29,6 @@
         "react-toastify": "^10.0.5",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
-        "tsc-silent": "^1.2.2",
         "zod": "^3.23.8"
     },
     "devDependencies": {
@@ -48,6 +47,7 @@
         "prettier": "^3.2.5",
         "sass": "^1.77.2",
         "tailwindcss": "^3.4.3",
+        "tsc-silent": "^1.2.2",
         "typescript": "^5.2.2",
         "vite": "^5.2.0"
     }
