--- a/data-tokeniztion-fe/package.json
+++ b/data-tokeniztion-fe/package.json
@@ -13,8 +13,10 @@
     "dependencies": {
         "@aws-amplify/ui-react": "^6.1.12",
         "@hookform/resolvers": "^3.4.0",
+        "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
+        "@tanstack/react-query": "^5.31.0",
         "aws-amplify": "^6.3.2",
         "axios": "^1.7.1",
         "class-variance-authority": "^0.7.0",
@@ -24,6 +26,7 @@
         "lucide-react": "^0.378.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.4",
+        "react-paginate": "^8.2.0",
         "react-router": "^6.23.1",
         "react-router-dom": "^6.23.1",
         "react-toastify": "^10.0.5",
